--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,6 @@
   }
 }
 
-
-
 html {
 	scroll-behavior: smooth;
 }
@@ -138,7 +136,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #ffffff;
+		background: #000000;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -155,7 +153,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: #585858;
+		color: white;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -184,7 +182,7 @@ input, select, textarea {
 		-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
-		color: #585858;
+		color: #f6efef;
 		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
 	}
 
@@ -2903,7 +2901,7 @@ input, select, textarea {
 						height: 3em;
 						line-height: 3em;
 						padding: 0 1.5em;
-						background-color: rgba(255, 255, 255, 0.5);
+						background-color: rgba(29, 29, 29, 0.5);
 						border-radius: 4px;
 						border: 0;
 						font-size: 0.8em;
@@ -3201,7 +3199,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 5em 0 2em 0 ;
-		background-color: #f6f6f6;
+		background-color: #121111;
 	}
 
 		#footer > .inner {
@@ -3239,7 +3237,7 @@ input, select, textarea {
 				margin-top: 1em;
 				list-style: none;
 				font-size: 0.8em;
-				color: rgba(88, 88, 88, 0.5);
+				color: rgba(255, 255, 255, 0.5);
 			}
 
 				#footer > .inner .copyright a {
